frontend/src/App.css
body {
  margin: 0;
  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
  background-color: #110b14;
}

.App {
  max-width: 1000px;
  margin: auto;
  padding: 20px;
}

h1 {
  text-align: center;
  color: #ffffff;
  font-family: cursive;
}

h2 {
  color: #ffffff;
}

form {
  background: rgb(25, 21, 28);
  padding: 10px;
  margin-bottom: 20px;
  width: 60%;
  margin: 20px auto;
  margin-top: 30px;
  border-radius: 10px;
 
 
}

input {
  display: block;
  width: 90%;
  padding: 10px;
  background-color: #000000;
  border:none;
  margin: 10px auto;
 
}

button {
  padding: 10px 18px;
  margin: 5px;
  border: none;
  border-radius: 6px;
  Background-color: #271163;
  color: white;
  cursor: pointer;
}

button:hover {
  background-color: #6a00ff;
}

.book-card h3 {
  margin-top: 0;
}

.status {
  font-weight: bold;
}

.sold {
  color: red;
}

.available {
  color: rgb(0, 255, 0);
}

.book-card {
    background: rgb(14, 9, 20);
    width: 600px;
    margin: 20px auto;
    padding: 20px;
    border-radius: 10px;
    transition: transform 0.2s ease;
    box-shadow: 0 4px 20px rgba(43, 43, 43, 0.695);
    margin-bottom: 25px;
}

.book-card:hover {
    transform: translateY(-8px);
    color: #ffffff;
    background-color: #231f2d;
}

.book-card h3 {
    margin-top: 0;
    color: #ffffff;
}

.book-card p {
    margin: 6px 0;
}
.delete-button {
    background-color: #700000;
    color: rgb(255, 255, 255);
   
}
.delete-button:hover {
    background-color: #bc3535;
    color: rgb(255, 255, 255);
}

.mark-sold-button {
    background-color: #776310;
    color: rgb(255, 255, 255);
}
.mark-sold-button:hover { 
  background-color: rgb(205, 179, 60);
}

